Clear the custom element's reaction queue if upgrade fails.

This is step 7."Finally, ...".2 of
<https://html.spec.whatwg.org/#concept-upgrade-an-element>

BUG=645335

Review-Url: https://codereview.chromium.org/2456773002
Cr-Commit-Position: refs/heads/master@{#428288}

Former-commit-id: b2bda38bd5c73eeaed5198d7440cf5ddffe3a9c5